@@ -1,3 +1,11 @@
+2010-01-21  Xavier Queralt Mateu  <xqueralt@flumotion.com>
+
+	* flumotion/component/muxers/asf/Makefile.am:
+	* flumotion/component/muxers/asf/asf.xml:
+	* flumotion/component/muxers/asf/wizard_gtk.py (added):
+	Add a check for the fluasfmuxer so it can be used from the conversion
+	Step (See pub:r8454)
+
 2010-01-21  Josep Joan Ribas  <jribas@flumotion.com>
 
 	* flumotion/component/muxers/asf/asf.xml:
